# fin-int

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/src/: config.py
backend/src/ai/: analyzer.py  gemini_client.py  prompts.py
backend/src/api/: middleware.py
backend/src/api/routes/: analysis.py  documents.py  health.py
backend/src/models/: analysis.py  document.py
backend/src/rag/: bm25_index.py  chunker.py  document_parser.py  embedder.py  pipeline.py  retriever.py  vector_store.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/analysis/: AnalysisPanel.tsx  GrowthCard.tsx  GrowthTab.tsx  RiskCard.tsx  RiskTab.tsx  SourceTag.tsx  SummaryTab.tsx
frontend/src/components/chat/: ChatBar.tsx  ChatMessage.tsx
frontend/src/components/documents/: DocumentItem.tsx  DocumentVault.tsx  UploadZone.tsx
frontend/src/components/layout/: TopBar.tsx
frontend/src/components/ui/: Badge.tsx  ConfidenceBar.tsx  LoadingSpinner.tsx  MetricChip.tsx
frontend/src/hooks/: useAnalysis.ts  useDocuments.ts  useUpload.ts
frontend/src/store/: appStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: cn.ts
