[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.5.9",
    "fastapi>=0.137.2",
    "google-genai>=2.8.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]
